# StringCalcV2

./: .gitignore  CMakeLists.txt  README.md
include/: StringCalc.hpp
src/: StringCalc.cpp
tests/: catch_test_main.cpp  catch_test_suites.cpp
